--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,17 +2,17 @@ name: Full Sync and Publish
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'  # 每6小时自动同步
   workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout self repo
+      - name: Checkout no1-source
         uses: actions/checkout@v3
 
-      - name: Download Upstream (safe zip method)
+      - name: Download Upstream Rules
         run: |
           mkdir temp
           curl -L https://codeload.github.com/dler-io/Rules/zip/refs/heads/main -o temp/rules.zip
@@ -31,16 +31,16 @@ jobs:
           mv temp/Rules-main/.github/workflows/* .github/workflows/
           rm -rf temp
 
-      - name: Setup Git identity
-        run: |
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+      - name: Setup SSH for Push
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-      - name: Force Push to no1-rules
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      - name: Push to no1-rules
         run: |
-          git remote set-url origin https://hybriddbllc:${ACCESS_TOKEN}@github.com/hybriddbllc/no1-rules.git
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin git@github.com:hybriddbllc/no1-rules.git
           git add .
           git commit -m "Automated update from no1-source" || echo "No changes to commit"
           git push origin HEAD:main --force
