--- a/.github/workflows/update_china_ip.yml
+++ b/.github/workflows/update_china_ip.yml
@@ -3,23 +3,42 @@ name: Update China IP list
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # 每天UTC时间0点触发
+    - cron: '0 0 * * *' # 每天UTC时间0点执行（北京时间早上8点）
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Install jq
-        run: sudo apt-get install jq
+        run: sudo apt-get install -y jq
 
       - name: Update GeoIP CN Private
         run: |
-          curl -L -o Surge/Provider/geoip-cn-private.txt https://raw.githubusercontent.com/metowolf/iplist/master/data/geoip/china.txt
+          set -e  # 遇到任何错误立刻终止整个job
+          
+          mkdir -p Surge/Provider  # 确保目录存在
+
+          # 先保存之前的文件备份
+          if [ -f Surge/Provider/geoip-cn-private.txt ]; then
+            cp Surge/Provider/geoip-cn-private.txt Surge/Provider/geoip-cn-private.txt.bak
+          fi
+
+          # 下载最新的文件
+          curl -fL -o Surge/Provider/geoip-cn-private.txt https://raw.githubusercontent.com/metowolf/iplist/master/data/geoip/china.txt
+
+          # 比较新旧文件是否有变化
+          if cmp -s Surge/Provider/geoip-cn-private.txt Surge/Provider/geoip-cn-private.txt.bak; then
+            echo "No changes detected. Exiting without committing."
+            exit 0
+          fi
+
+          # 如果有变化就commit
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add Surge/Provider/geoip-cn-private.txt
-          git commit -m "chore: update geoip-cn-private.txt" || echo "No changes to commit"
+          git commit -m "chore: update geoip-cn-private.txt $(date +'%Y-%m-%d')"
           git push
