--- a/.github/workflows/update_china_ip.yml
+++ b/.github/workflows/update_china_ip.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *' # 每天UTC时间0点（北京时间早上8点）
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   update:
     runs-on: ubuntu-latest
