--- a/Surfboard/Rule.conf
+++ b/Surfboard/Rule.conf
@@ -8263,8 +8263,8 @@ IP-CIDR,222.73.156.235/32,REJECT,no-resolve
 
 
 
-# > Dler Cloud
-DOMAIN-SUFFIX,dler.cloud,DIRECT
+# > No1Airport
+DOMAIN-SUFFIX,no1airport.com,DIRECT
 
 # > Epic
 DOMAIN-KEYWORD,epicgames,DIRECT
