--- a/Surfboard/Rule.conf
+++ b/Surfboard/Rule.conf
@@ -9800,7 +9800,7 @@ DOMAIN-SUFFIX,cn88.net,DIRECT
 DOMAIN-SUFFIX,dct-cloud.com,DIRECT
 DOMAIN-SUFFIX,didialift.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,DIRECT
-DOMAIN-SUFFIX,dler.cloud,DIRECT
+DOMAIN-SUFFIX,no1airport.com,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
