--- a/Surge/Surge 2/Rule.conf
+++ b/Surge/Surge 2/Rule.conf
@@ -8411,8 +8411,8 @@ IP-CIDR6,2402:4e00:1200:ed00:0:9089:6dac:96b6/128,HTTPDNS,no-resolve
 
 
 
-# > Dler Cloud
-DOMAIN-SUFFIX,dler.cloud,DIRECT
+# > No1Airport
+DOMAIN-SUFFIX,no1airport.com,DIRECT
 
 # > Apple CDN
 PROCESS-NAME,storedownloadd,DIRECT
@@ -8972,7 +8972,6 @@ DOMAIN-SUFFIX,fast.com,Speedtest
 USER-AGENT,SpeedTest*,Speedtest
 DOMAIN-KEYWORD,speedtest,Speedtest
 DOMAIN-SUFFIX,ooklaserver.net,Speedtest
-DOMAIN,speed.dler.io,Speedtest
 
 # > Speed Test by Cloudflare
 DOMAIN-SUFFIX,speed.cloudflare.com,Speedtest
@@ -10130,7 +10129,7 @@ DOMAIN-SUFFIX,cn88.net,Domestic
 DOMAIN-SUFFIX,dct-cloud.com,Domestic
 DOMAIN-SUFFIX,didialift.com,Domestic
 DOMAIN-SUFFIX,digicert.com,Domestic
-DOMAIN-SUFFIX,dler.cloud,Domestic
+DOMAIN-SUFFIX,no1airport.com,Domestic
 DOMAIN-SUFFIX,douban.com,Domestic
 DOMAIN-SUFFIX,doubanio.com,Domestic
 DOMAIN-SUFFIX,douyin.com,Domestic
