--- a/Auto/PROXY.conf
+++ b/Auto/PROXY.conf
@@ -852,7 +852,7 @@ DOMAIN-SUFFIX,webrtc.org,🍃 Proxy
 DOMAIN-SUFFIX,v2ex.com,🍃 Proxy
 
 
-DOMAIN-KEYWORD,dlercloud,🍃 Proxy
+DOMAIN-KEYWORD,no1airport,🍃 Proxy
 
 # > VikACG
 DOMAIN-SUFFIX,vikacg.com,🍃 Proxy
