--- a/Surge/Surge 4/Head.conf
+++ b/Surge/Surge 4/Head.conf
@@ -17,8 +17,8 @@ socks5-listen = 0.0.0.0:8889
 wifi-access-http-port = 8888
 wifi-access-socks5-port = 8889
 
-external-controller-access = dler@0.0.0.0:6170
-http-api = dler@0.0.0.0:6171
+external-controller-access = no1@0.0.0.0:6170
+http-api = no1@0.0.0.0:6171
 http-api-web-dashboard = true
 
 internet-test-url = http://wifi.vivo.com.cn/generate_204
