--- a/Surge/Surge 3/Head.conf
+++ b/Surge/Surge 3/Head.conf
@@ -16,7 +16,7 @@ socks5-listen = 0.0.0.0:8889
 wifi-access-http-port = 8888
 wifi-access-socks5-port = 8889
 
-external-controller-access = dler@0.0.0.0:6170
+external-controller-access = no1@0.0.0.0:6170
 
 internet-test-url = http://wifi.vivo.com.cn/generate_204
 proxy-test-url = http://cp.cloudflare.com/generate_204
