--- a/Surge/Surge 2/Head.conf
+++ b/Surge/Surge 2/Head.conf
@@ -11,7 +11,7 @@ socks-interface = 0.0.0.0
 port = 8888
 socks-port = 8889
 
-external-controller-access = dler@0.0.0.0:6170
+external-controller-access = no1@0.0.0.0:6170
 
 allow-wifi-access = true
 replica = false
