--- a/QuantumultX/Head.conf
+++ b/QuantumultX/Head.conf
@@ -37,10 +37,10 @@ static = PayPal,Outside,direct,img-url=https://testingcf.jsdelivr.net/gh/Koolson
 static = Speedtest,direct,Hong Kong,Taiwan,Singapore,Japan,Korea,United States,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Speedtest.png
 static = Others,Outside,direct,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Final.png
 
-available = Hong Kong,resource-tag-regex=Dler Cloud - HK,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hong_Kong.png
-available = Singapore,resource-tag-regex=Dler Cloud - SG,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Singapore.png
-available = Taiwan,resource-tag-regex=Dler Cloud - TW,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Taiwan.png
-available = United States,resource-tag-regex=Dler Cloud - US,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/United_States.png
-available = Japan,resource-tag-regex=Dler Cloud - JP,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Japan.png
-available = Korea,resource-tag-regex=Dler Cloud - KR,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Korea.png
-static = Other,resource-tag-regex=Dler Cloud - OT,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Available.png
+available = Hong Kong,resource-tag-regex=No1 Airport - HK,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Hong_Kong.png
+available = Singapore,resource-tag-regex=No1 Airport - SG,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Singapore.png
+available = Taiwan,resource-tag-regex=No1 Airport - TW,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Taiwan.png
+available = United States,resource-tag-regex=No1 Airport - US,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/United_States.png
+available = Japan,resource-tag-regex=No1 Airport - JP,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Japan.png
+available = Korea,resource-tag-regex=No1 Airport - KR,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Korea.png
+static = Other,resource-tag-regex=No1 Airport - OT,img-url=https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Available.png
