--- a/Surge/Surge 3/Rule.conf
+++ b/Surge/Surge 3/Rule.conf
@@ -73,6 +73,7 @@ RULE-SET,https://cdn.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/
 
 RULE-SET,https://cdn.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Domestic.list,Domestic
 RULE-SET,https://cdn.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Domestic%20IPs.list,Domestic
+RULE-SET,https://cdn.jsdelivr.net/gh/VirgilClyne/GetSomeFries@main/ruleset/ASN.China.list,Domestic
 RULE-SET,LAN,DIRECT
 
 GEOIP,CN,Domestic
