--- a/Clash/Provider/AI Suite.yaml
+++ b/Clash/Provider/AI Suite.yaml
@@ -25,7 +25,9 @@ payload:
   - DOMAIN,gateway.ai.cloudflare.com
 
   # > Codeium
+  - DOMAIN-SUFFIX,windsurf.com
   - DOMAIN-SUFFIX,codeium.com
+  - DOMAIN-SUFFIX,codeiumdata.com
 
   # > Copilot
   - DOMAIN-SUFFIX,githubcopilot.com
