--- a/Surge/Surge 2/Rule.conf
+++ b/Surge/Surge 2/Rule.conf
@@ -9036,7 +9036,9 @@ DOMAIN-SUFFIX,claudeusercontent.com,AI Suite
 DOMAIN,gateway.ai.cloudflare.com,AI Suite
 
 # > Codeium
+DOMAIN-SUFFIX,windsurf.com,AI Suite
 DOMAIN-SUFFIX,codeium.com,AI Suite
+DOMAIN-SUFFIX,codeiumdata.com,AI Suite
 
 # > Copilot
 DOMAIN-SUFFIX,githubcopilot.com,AI Suite
