--- a/Clash/Rule.yaml
+++ b/Clash/Rule.yaml
@@ -3,7 +3,7 @@
   - RULE-SET,Special,DIRECT
 
   - RULE-SET,Netflix,Netflix
-  - RULE-SET,Disney Plus,Disney
+  - RULE-SET,Disney Plus,Disney Plus
   - RULE-SET,YouTube,YouTube
 #   - RULE-SET,YouTube Music,YouTube
   - RULE-SET,Max,Max
@@ -20,6 +20,7 @@
 
   - RULE-SET,Abema TV,Asian TV
   - RULE-SET,Bahamut,Asian TV
+  - RULE-SET,DMM,Asian TV
   - RULE-SET,Fox+,Asian TV
   - RULE-SET,Hulu Japan,Asian TV
   - RULE-SET,Japonx,Asian TV
@@ -84,7 +85,7 @@ script:
             'HTTPDNS': 'HTTPDNS',
             'Special': 'DIRECT',
             'Netflix': 'Netflix',
-            'Disney Plus': 'Disney',
+            'Disney Plus': 'Disney Plus',
             'YouTube': 'YouTube',
             'Max': 'Max',
             'Spotify': 'Spotify',
@@ -98,6 +99,7 @@ script:
             'WeTV': 'CN Mainland TV',
             'Abema TV': 'Asian TV',
             'Bahamut': 'Asian TV',
+            'DMM': 'Asian TV',
             'Fox+': 'Asian TV',
             'Hulu Japan': 'Asian TV',
             'Japonx': 'Asian TV',
