--- a/Surge/Surge 3/Rule.conf
+++ b/Surge/Surge 3/Rule.conf
@@ -3,7 +3,7 @@ RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surg
 RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Special.list,DIRECT
 
 RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/Netflix.list,Netflix
-RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/Disney%20Plus.list,Disney
+RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/Disney%20Plus.list,Disney Plus
 RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/YouTube.list,YouTube
 RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/YouTube%20Music.list,YouTube
 RULE-SET,https://testingcf.jsdelivr.net/gh/hybriddbllc/no1-rules@main/Surge/Surge%203/Provider/Media/Max.list,Max
