--- a/Surge/Surge 2/Rule.conf
+++ b/Surge/Surge 2/Rule.conf
@@ -9010,6 +9010,9 @@ DOMAIN-SUFFIX,spoprod-a.akamaihd.net,Microsoft
 DOMAIN-SUFFIX,storage.msn.com,Microsoft
 DOMAIN-SUFFIX,windows.net,Microsoft
 
+# > Augment
+DOMAIN-SUFFIX,augmentcode.com,AI Suite
+
 # > ChatGPT
 DOMAIN-SUFFIX,ai.com,AI Suite
 DOMAIN-SUFFIX,chatgpt.com,AI Suite
